# MaRaw

./: .gitignore  CMakeLists.txt  README.md  compile.sh  debug.sh  dis_n_qu_mandel.h  fs.c  graphing.h  lp.h  main.c  mandelbrot_set.h  mandelbrot_set.h~  memdebug.sh  n_mandelbrot.h  n_qu_mandel.h  parabola.h  prep.py  pt.h  run.sh  run_fin.sh  tube.h
header/: Buffer.h  Camera.h  Complex.h  Quaternion.h  Span.h  Vectors.c  Vectors.h  finVectors.h  type_shortage.h
pre/header/: Buffer.hp  Camera.hp  IntBuffer.hp  IntVectors.hp  Span.hp  Vectors.hp
pre/src/: Vectors.cp
src/: Buffer.c  Camera.c  Complex.c  Quaternion.c  Span.c  Vectors.c  finVectors.c
